SERVER-8974 $geoNear alias for $near now works with 2d indexes. Was throwing uassert 13464 before.

Signed-off-by: Ian Whalen <ian.whalen@gmail.com>